--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
     "name": "html5-demos",
     "scripts": {
-        "start": "nodemon app.js"
+        "watch": "tsc -w",
+        "server": "nodemon app.js"
     },
     "dependencies": {
+        "@types/jquery": "^3.3.2",
+        "@types/bootstrap": "^4.1.0",
+        "@types/core-js": "^0.9.41",
+        "@types/node": "^10.0.3",
         "koa": "^2.5.1",
         "koa-send": "^4.1.3"
     },
     "devDependencies": {
-        "nodemon": "^1.14.7"
+        "nodemon": "^1.14.7",
+        "typescript": "^2.4.2"
     }
 }
